all components are ready for sprint 1

--- a/src/styles/utils/_addFonts.scss
+++ b/src/styles/utils/_addFonts.scss
@@ -1,10 +1,9 @@
 @font-face {
-  font-family: "JetBrains Mono";
+  font-family: 'Jet Brains Mono';
   src: url("../../fonts/JetBrainsMono/JetBrainsMono-Regular.woff2") format("woff2");  
-  font-weight: 400;
 }
 @font-face {
-  font-family: "JetBrains Mono";
+  font-family: 'Jet Brains Mono';
   src: url("../../fonts/JetBrainsMono/JetBrainsMono-Bold.woff2") format("woff2");
   font-weight: 700;
 }
