update handle of api requests && move base_url to global context of .env && add some fairy dust

--- a/src/components/Main/BurgerConstructor/burgerConstructor.module.scss
+++ b/src/components/Main/BurgerConstructor/burgerConstructor.module.scss
@@ -156,6 +156,18 @@
         display: flex;
         justify-content: flex-start;
         align-items: flex-start;
+
+        user-select: none;
+
+        &_disabled{
+          cursor: not-allowed;
+
+          button{
+            opacity: .3;
+            
+            pointer-events: none;
+          }
+        }
       }
     }
   // END
