--- a/src/components/Main/BurgerConstructor/draggableConstructorElement.module.scss
+++ b/src/components/Main/BurgerConstructor/draggableConstructorElement.module.scss
@@ -4,6 +4,23 @@
   align-items: center;
 
   width: 100%;
+
+  margin-top: 0px;
+  transition: .5s margin-top, .5s margin-bottom, .5s opacity;
+  
+  z-index: 2;
+
+  &_hover_top{
+    margin-top: -60px;
+    margin-bottom: 60px;
+  }
+  &_hover_bottom{
+    margin-top: 60px;
+  }
+  &_drag{
+    opacity: .3;
+    z-index: 1;
+  }
 }
 
 .controlElement{
