--- a/src/components/AppHeader/appHeader.module.scss
+++ b/src/components/AppHeader/appHeader.module.scss
@@ -11,6 +11,87 @@
   background: $background__color_sub;
 }
 
+.navigationContainer, .navigationContainer__nav{
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  width: auto;
+}
+
+.nav__item{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  width: auto;
+
+
+  &:not(:last-child){
+    margin-right: 8px;
+  }
+
+
+  .item__link{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    padding: 20px 16px;
+
+    cursor: pointer;
+
+    text-decoration: none;
+
+
+    .link__icon{
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+
+      width: 24px;
+
+      margin-right: 8px;
+
+      svg{
+        fill: $text__color_sub;
+
+        will-change: fill;
+        transition: .3s fill;
+      }
+    }
+
+    .link__text{
+      white-space: nowrap;
+      
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+
+      color: $text__color_sub;
+
+      will-change: color;
+      transition: .3s color;
+    }
+  }
+
+  &.active, &:hover{
+    .item__link{
+
+      .link__icon{
+        svg{
+          fill: $text__color_prior;
+        }
+      }
+      .link__text{
+        color: $text__color_prior;
+      }
+    }
+  }
+}
+
+
 .headerContainer__logo{
   display: flex;
   justify-content: flex-start;
@@ -31,5 +112,72 @@
 
   svg{
     width: 100%; height: auto;
+  }
+}
+
+.profileContainer{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  width: auto;
+
+
+  .profileContainer__link{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    padding: 20px 16px;
+
+    cursor: pointer;
+
+    text-decoration: none;
+
+
+    .link__icon{
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+
+      width: 24px;
+      margin-right: 8px;
+
+      svg{
+        fill: $text__color_sub;
+
+        will-change: fill;
+        transition: .3s fill;
+      }
+    }
+
+    .link__text{
+      white-space: nowrap;
+      
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+
+      color: $text__color_sub;
+
+      will-change: color;
+      transition: .3s color;
+    }
+  }
+
+  
+  &.active, &:hover{
+    .profileContainer__link{
+
+      .link__icon{
+        svg{
+          fill: $text__color_prior;
+        }
+      }
+      .link__text{
+        color: $text__color_prior;
+      }
+    }
   }
 }
