create auth pages && setup routing things for them

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,6 +40,11 @@ body {
   &::-webkit-scrollbar-thumb {
     background: rgba(133, 133, 173, 1);
   }
+
+  button, input{
+    border: none;
+    background: none;
+  }
 }
 
 code {
