--- a/src/components/Modals/IngredientDetails/ingredientDetails.module.scss
+++ b/src/components/Modals/IngredientDetails/ingredientDetails.module.scss
@@ -9,7 +9,7 @@
 
   .ingredientDetails__title{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 
     width: 100%; height: 64px;
