--- a/src/pages/auth/auth.module.scss
+++ b/src/pages/auth/auth.module.scss
@@ -61,49 +61,11 @@
           transform: rotate(0deg);
         // END
 
-        input{
-          width: 100%; height: 64px;
+        :global(.input__container){
+          width: 100%;
 
-          padding: 0 24px;
-
-
-          font-weight: 400;
-          font-size: 16px;
-          line-height: 1;
-
-          color: $text__color_prior;
-
-          border-radius: 40px;
-          background: $background__color_input;
-
-
-          &:placeholder{
-            color: $text__color_sub;
-          }
-        }
-
-        .input__show{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          width: 24px; height: 24px;
-
-          position: absolute;
-          right: 24px;
-
-          cursor: pointer;
-
-
-          &.input__show_hide{
-            >:last-child{
-              display: none;
-            }
-          }
-          &:not(.input__show_hide){
-            >:first-child{
-              display: none;
-            }
+          :global(.input){
+            width: 100%;
           }
         }
       }
