--- a/src/components/EditForm/editForm.module.scss
+++ b/src/components/EditForm/editForm.module.scss
@@ -1,11 +1,11 @@
-.editContainer{
+.formContainer{
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   
   width: 100%;
 
-  .editContainer__label{
+  .formContainer__input{
     display: flex;
 
     width: 100%; height: 64px;
@@ -26,7 +26,7 @@
     }
   }  
 
-  .editContainer__controls{
+  .formContainer__controls{
     display: flex;
     align-items: center;
 
