--- a/src/components/Modals/IngredientDetails/ingredientDetails.module.scss
+++ b/src/components/Modals/IngredientDetails/ingredientDetails.module.scss
@@ -6,10 +6,14 @@
 
   width: 100%;
 
+  &.ingredientDetails_self{
+    margin-top: 120px;
+  }
+
 
   .ingredientDetails__title{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 
     width: 100%; height: 64px;
