--- a/src/components/Main/BurgerConstructor/burgerConstructor.module.scss
+++ b/src/components/Main/BurgerConstructor/burgerConstructor.module.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-start;
+
+  gap: 10px;
   
 
   // Отображение активных ингредиентов
@@ -69,7 +71,9 @@
       overflow-y: scroll;
 
       scroll-behavior: smooth;
+
       padding-right: 8px;
+
       margin-right: -16px;
       
 
