--- a/src/components/Orders/OrderItem/orderItem.module.scss
+++ b/src/components/Orders/OrderItem/orderItem.module.scss
@@ -102,7 +102,48 @@
                     position: relative;
 
                     .item__icon {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
                         width: 64px; height: 64px;
+                        overflow: hidden;
+
+                        z-index: 1;
+
+                        pointer-events: none;
+
+                        cursor: pointer;
+
+                        position: relative;
+
+                        &:before {
+                            content: '';
+                            
+                            position: absolute;
+                            width: 100%; height: 100%;
+
+                            background: linear-gradient(63.18deg, #801AB3 0%, #4C4CFF 100%);
+                            border-radius: 50%;
+                        }
+                        &:after {
+                            content: '';
+                            
+                            position: absolute;
+                            width: 95%; height: 95%;
+
+                            background: $background__color_prior;
+                            border-radius: 50%;
+                        }
+
+                        picture {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            min-width: 150%;
+                            z-index: 2
+                        }
                     }
 
                     .item__title {
@@ -290,6 +331,19 @@
                 justify-content: space-between;
 
                 width: 100%;
+            }
+        }
+    }
+    &_self {
+        .OrderItem__footer {
+            .footer__ingredients{
+                .ingredients__list{
+                    .list__item {
+                        .item__icon {
+                            pointer-events: all;
+                        }
+                    }
+                }
             }
         }
     }
